# stripe-agents-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
src/stripe_mcp/: server.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/unit/: test_account.py  test_customers.py  test_helpers_and_edge_cases.py  test_invoices.py  test_payment_links_intents.py  test_products_prices.py  test_refunds_coupons_disputes.py  test_search_fetch.py  test_subscriptions.py  test_tool_registry.py
