[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stripe-agents-mcp"
version = "0.1.0"
description = "MCP server exposing Stripe APIs as structured tools for Claude and other agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0,<2",
    "stripe>=7.0.0,<16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "anyio>=4.0",
]

[project.scripts]
stripe-agents-mcp = "stripe_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stripe_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
